# OCTView_NIRF

./: OCTView.sln
OCTView/: Configuration.h  OCTView.aps  OCTView.cpp  OCTView.h  OCTView.ini  OCTView.rc  OCTView.vcxproj  OCTView.vcxproj.filters  OCTViewDlg.cpp  OCTViewDlg.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h
OCTView/ImageProcess/: Imshow.cpp  Imshow.h  MyBitmap.cpp  MyBitmap.h  MyBitmap1.cpp  MyBitmap1.h  circularize.h  medfilt_8u.h
OCTView/ImageProcess/Colormap/: ch1.colormap  ch3.colormap  hot.colormap  parula.colormap  sepia.colormap
OCTView/ImageProcess/OCTProcess/: OCTProcess.cpp  OCTProcess.h
OCTView/ImageProcess/OCTProcess/CalibrationDlg/: CalibrationDlg.cpp  CalibrationDlg.h
OCTView/ImageProcess/OCTProcess/CalibrationDlg/prev/: uOCT Calib.cpp  uOCT Calib.h
OCTView/Miscel/: Scope.cpp  Scope.h
OCTView/Miscel/numcpp/: allocator.h  array.h  array.test.cpp  array_functions.h  base_array.h  base_array.test.cpp  gpu_array.h  gpu_array.test.cpp  opencv.h  opencv.test.cpp  test_cuda_kernel.cu
OCTView/Miscel/numcpp/example/: circularize.cpp  circularize.h  circularize.m
OCTView/Miscel/numcpp/prev/: .gitignore  CMakeLists.txt  README.md  catch.hpp  config.h.in  numcpp.cpp  test.cpp  test.old.cpp
OCTView/Miscel/objcpp/: Queue.h  object.h  property.h  signal.h  ui.h
OCTView/res/: OCTView.rc2
